manifest/objects/ALTF__Insight_Card_Contact__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__ConcatenatedFields__c</fullName>
        <formula>IF(ISPICKVAL(ALTF__Type__c, &apos;Informer&apos;), &apos;Informer&apos;, &apos;Owner&apos;) &amp; CASESAFEID(ALTF__Contact__c) &amp; CASESAFEID(ALTF__Insight_Card__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConcatenatedFields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Insight Card Contacts</relationshipLabel>
        <relationshipName>Insight_Node_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__Insight_Card__c</fullName>
        <label>Insight Node</label>
        <referenceTo>ALTF__Insight_Card__c</referenceTo>
        <relationshipLabel>Insight Card Contacts</relationshipLabel>
        <relationshipName>Insight_Node_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Informer</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Altify Insight Card Contact</label>
    <nameField>
        <label>Insight Node Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Insight Card Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>